--- a/src/3rdparty/games/qtcapra/qtcapra.ui
+++ b/src/3rdparty/games/qtcapra/qtcapra.ui
@@ -6,22 +6,29 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>352</width>
-    <height>425</height>
+    <width>480</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="2" column="1">
-    <widget class="QLabel" name="label">
+   <item row="0" column="0" colspan="2">
+    <widget class="QPushButton" name="startButton">
      <property name="text">
-      <string>Volume</string>
+      <string>Start</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="0">
+   <item row="2" column="0" colspan="2">
+    <widget class="QPushButton" name="quitButton">
+     <property name="text">
+      <string>Quit</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
     <widget class="QSlider" name="volume">
      <property name="maximum">
       <number>250</number>
@@ -34,17 +41,10 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="0">
-    <widget class="QPushButton" name="startButton">
+   <item row="1" column="1">
+    <widget class="QLabel" name="label">
      <property name="text">
-      <string>Start</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0">
-    <widget class="QPushButton" name="quitButton">
-     <property name="text">
-      <string>Quit</string>
+      <string>Volume</string>
      </property>
     </widget>
    </item>
