--- a/src/3rdparty/games/qtcapra/qtcapra.ui
+++ b/src/3rdparty/games/qtcapra/qtcapra.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>480</width>
-    <height>600</height>
+    <height>560</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,37 +21,14 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="0" colspan="2">
+   <item row="2" column="0" colspan="2">
     <widget class="QPushButton" name="quitButton">
      <property name="text">
       <string>Quit</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QSlider" name="volume">
-     <property name="minimum">
-      <number>50</number>
-     </property>
-     <property name="maximum">
-      <number>100</number>
-     </property>
-     <property name="value">
-      <number>80</number>
-     </property>
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="1">
-    <widget class="QLabel" name="label">
-     <property name="text">
-      <string>Volume</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="0" colspan="2">
+   <item row="1" column="0" colspan="2">
     <widget class="QComboBox" name="comboBox">
      <property name="minimumContentsLength">
       <number>5</number>
@@ -63,7 +40,12 @@
      </item>
      <item>
       <property name="text">
-       <string>culatone</string>
+       <string>fascista</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>culattone</string>
       </property>
      </item>
     </widget>
