qt-pairs: fixed menu and added images set to resource file

--- a/src/3rdparty/games/qt-pairs-1.0/qt-pairs.qrc
+++ b/src/3rdparty/games/qt-pairs-1.0/qt-pairs.qrc
@@ -8,6 +8,22 @@
         <file>images/5.png</file>
         <file>images/6.png</file>
         <file>images/7.png</file>
+        <file>images/Beer/0.png</file>
+        <file>images/Beer/1.png</file>
+        <file>images/Beer/2.png</file>
+        <file>images/Beer/3.png</file>
+        <file>images/Beer/4.png</file>
+        <file>images/Beer/5.png</file>
+        <file>images/Beer/6.png</file>
+        <file>images/Beer/7.png</file>
+        <file>images/Puppets/0.png</file>
+        <file>images/Puppets/1.png</file>
+        <file>images/Puppets/2.png</file>
+        <file>images/Puppets/3.png</file>
+        <file>images/Puppets/4.png</file>
+        <file>images/Puppets/5.png</file>
+        <file>images/Puppets/6.png</file>
+        <file>images/Puppets/7.png</file>
         <file>images/about.png</file>
         <file>images/exit.png</file>
         <file>images/find.png</file>
