Added new image set: tits :)

--- a/src/3rdparty/games/qt-pairs-1.0/qt-pairs.qrc
+++ b/src/3rdparty/games/qt-pairs-1.0/qt-pairs.qrc
@@ -24,6 +24,14 @@
         <file>images/Puppets/5.png</file>
         <file>images/Puppets/6.png</file>
         <file>images/Puppets/7.png</file>
+        <file>images/Tits/0.png</file>
+        <file>images/Tits/1.png</file>
+        <file>images/Tits/2.png</file>
+        <file>images/Tits/3.png</file>
+        <file>images/Tits/4.png</file>
+        <file>images/Tits/5.png</file>
+        <file>images/Tits/6.png</file>
+        <file>images/Tits/7.png</file>
         <file>images/about.png</file>
         <file>images/exit.png</file>
         <file>images/find.png</file>
