--- a/src/3rdparty/games/qt-pairs-1.0/qt-pairs.qrc
+++ b/src/3rdparty/games/qt-pairs-1.0/qt-pairs.qrc
@@ -16,6 +16,14 @@
         <file>images/Beer/5.png</file>
         <file>images/Beer/6.png</file>
         <file>images/Beer/7.png</file>
+        <file>images/Software/0.png</file>
+        <file>images/Software/1.png</file>
+        <file>images/Software/2.png</file>
+        <file>images/Software/3.png</file>
+        <file>images/Software/4.png</file>
+        <file>images/Software/5.png</file>
+        <file>images/Software/6.png</file>
+        <file>images/Software/7.png</file>
         <file>images/Puppets/0.png</file>
         <file>images/Puppets/1.png</file>
         <file>images/Puppets/2.png</file>
